src/test/deca/context/valid/two_methods_same_name.deca
class A{
int methode(){
int x = 2;
return x;
}
int methode(int x){
return x;
}
}