src/test/deca/context/invalid/double_decl_method_in_class.deca
class A { 
int set(){
}
float set(){
}
}